lombok usage of val; performance improvements